--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-flash": "^0.0.2",
+    "express-handlebars": "^8.0.3",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "hbs": "^4.2.0",
