--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@ PORT = 2625
 
 EMAIL_USER=tomharry192999@gmail.com
 EMAIL_PASS=uqfedlcmdkhnpxnl
+
+
+GEMINI_API_KEY = AIzaSyBJSGU6IYJ1O9EwCkZTupv5FKA32T6Oim8
+
+
+ENCRYPTION_KEY=my32characterlongsecretkey123456
+ENCRYPTION_IV=1234567890123456
+
